--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Gustavo Stanley. It uses data from mapbox.com and openweathermap.com</p>
         <img src="/img/robot.png" class="portrait">
     </div>
     {{>footer}}
